--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                     <div class="course-info">
                         <h4>📚 Información del Curso</h4>
                         <p><strong>Curso:</strong> Programación Numérica</p>
-                        <p><strong>Docente:</strong> [Nombre del Profesor]</p>
+                        <p><strong>Docente:</strong> Torres Cruz Fred</p>
                         <p><strong>Institución:</strong> Universidad Nacional Del Altiplano Puno</p>
                         <p><strong>Período:</strong> Cuarto semestre 2025-2</p>
                     </div>
@@ -592,7 +592,7 @@
                 <h4>🎓 Información Académica</h4>
                 <p><strong>Estudiante:</strong> Ronald Wilder Incacutipa Muñuico</p>
                 <p><strong>Curso:</strong> Programación Numérica</p>
-                <p><strong>Docente:</strong> [Nombre del Profesor]</p>
+                <p><strong>Docente:</strong> Torres Cruz Fred</p>
                 <p><strong>Institución:</strong> Universidad Nacional del Altiplano Puno</p>
             </div>
             
