--- a/unidad1.html
+++ b/unidad1.html
@@ -25,7 +25,7 @@
   <h3>Tareas</h3>
   <ul>
     <!-- Aquí agregas tus tareas manualmente -->
-    <li><a href="primera_tarea.html" target="_blank">Primera tarea</a></li>
+    <li><a href="primera_tarea.html" target="_blank">Identificacion de funciones</a></li>
     <!-- Ejemplo para más tareas -->
     <!-- <li><a href="segunda_tarea.html" target="_blank">Segunda tarea</a></li> -->
   </ul>
