--- a/primera_tarea.html
+++ b/primera_tarea.html
@@ -61,8 +61,8 @@
   </style>
 </head>
 <body>
-  <h1>📘 Primera Tarea</h1>
-  <p>Este codigo trata de identificar una funcion de una simple ecuacion</p>
+  <h1>📘 Identificacion de funciones</h1>
+  <p>Este codigo identifica si una expresion es una funcion o una ecuacion</p>
 
   <div class="code-container">
     <div class="buttons">
