--- a/unidad1.html
+++ b/unidad1.html
@@ -26,8 +26,8 @@
   <ul>
     <!-- Aquí agregas tus tareas manualmente -->
     <li><a href="primera_tarea.html" target="_blank">Identificacion de funciones</a></li>
-    <!-- Ejemplo para más tareas -->
-    <!-- <li><a href="segunda_tarea.html" target="_blank">Segunda tarea</a></li> -->
+    
+    <li><a href="segunda_tarea.html" target="_blank">graficador de funciones lineales</a></li>
   </ul>
 </body>
 </html>
