--- a/unidad1.html
+++ b/unidad1.html
@@ -27,7 +27,7 @@
     <!-- Aquí agregas tus tareas manualmente -->
     <li><a href="primera_tarea.html" target="_blank">Identificacion de funciones</a></li>
     
-    <li><a href="segunda_tarea.html" target="_blank">graficador de funciones lineales</a></li>
+    <li><a href="segunda_tarea.html" target="_blank">Graficador de funciones lineales</a></li>
   </ul>
 </body>
 </html>
