--- a/primera_tarea.html
+++ b/primera_tarea.html
@@ -67,7 +67,7 @@
   <div class="code-container">
     <div class="buttons">
       <button onclick="copiarCodigo()">📋 Copiar Código</button>
-      <a href="tarea.pdf" target="_blank" class="pdf-btn">📑 Ver PDF</a>
+      <a href="tarea1.pdf" target="_blank" class="pdf-btn">📑 Ver PDF</a>
     </div>
 
     <pre id="codigo">
