--- a/unidad1.html
+++ b/unidad1.html
@@ -28,6 +28,8 @@
     <li><a href="primera_tarea.html" target="_blank">Identificacion de funciones</a></li>
     
     <li><a href="segunda_tarea.html" target="_blank">Graficador de funciones lineales</a></li>
+
+     <li><a href="tercera_tarea.html" target="_blank">Graficador de funciones lineales y resolucion de ejercicios</a></li>
   </ul>
 </body>
 </html>
