--- a/unidad1.html
+++ b/unidad1.html
@@ -29,7 +29,9 @@
     
     <li><a href="segunda_tarea.html" target="_blank">Graficador de funciones lineales</a></li>
 
-     <li><a href="tercera_tarea.html" target="_blank">Graficador de funciones lineales y resolucion de ejercicios</a></li>
+    <li><a href="tercera_tarea.html" target="_blank">Graficador de funciones lineales y resolucion de ejercicios</a></li>
+
+    <li><a href="cuarta_tarea.html" target="_blank">Metodo de Newton Raphson</a></li>
   </ul>
 </body>
 </html>
