--- a/unidad1.html
+++ b/unidad1.html
@@ -32,6 +32,8 @@
     <li><a href="tercera_tarea.html" target="_blank">Graficador de funciones lineales y resolucion de ejercicios</a></li>
 
     <li><a href="cuarta_tarea.html" target="_blank">Metodo de Newton Raphson</a></li>
+
+    <li><a href="cuarta_tarea.html" target="_blank">Metodo de Regula Falsi</a></li>
   </ul>
 </body>
 </html>
