Update title and headings to 'Metodo de regula falsi'

--- a/quinta_tarea.html
+++ b/quinta_tarea.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Graficador de funciones lineales y resolución de ejercicios</title>
+  <title>Metodo de regula falsi</title>
   <style>
     body {
       font-family: "Consolas", monospace;
@@ -61,8 +61,8 @@
   </style>
 </head>
 <body>
-  <h1>📘 Graficador de funciones lineales y resolución de ejercicios</h1>
-  <p>Este código usa el método de Newton-Raphson para encontrar la raíz de una función.</p>
+  <h1>📘 Metodo de regula falsi</h1>
+  <p>Este metodo sirve para calcular la raiz de una funcion.</p>
 
   <div class="code-container">
     <div class="buttons">
