Update title and heading in sexta_tarea.html

--- a/sexta_tarea.html
+++ b/sexta_tarea.html
@@ -3,7 +3,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Graficador de funciones lineales y resolución de ejercicios</title>
+  <title>Metodos para encontrar la raiz de una funcion</title>
   <style>
     body {
       font-family: "Consolas", monospace;
@@ -85,7 +85,7 @@
 </head>
 <body>
 
-  <h1>📘 Graficador de funciones lineales y resolución de ejercicios</h1>
+  <h1>📘 Metodos para encontrar la raiz de una funcion</h1>
   <p>Selecciona un método y explora su código y PDF:</p>
 
   <div class="tabs">
